--- a/SweetDreams/SweetDreams.Admin/wwwroot/index.html
+++ b/SweetDreams/SweetDreams.Admin/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
-    <script src="inputfile.js"></script>
+    <script src="_content/BlazorInputFile/inputfile.js"></script>
 </head>
 
 <body>
