--- a/SweetDreams/SweetDreams.Client/wwwroot/index.html
+++ b/SweetDreams/SweetDreams.Client/wwwroot/index.html
@@ -8,6 +8,7 @@
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <script src="_content/BlazorInputFile/inputfile.js"></script>
+    <link href="_content/Blazored.Toast/blazored-toast.min.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
